# pyneurode

./: .gitignore  .readthedocs.yaml  CLAUDE.md  LICENSE  README.md  dpg_layout.ini  dpg_test.py  node_editor.ini  pyproject.toml  requirements.txt  setup.py  sorter_node.py  sorter_node_decode.py  sorter_node_decode_accuracy_evaluate.py  sorter_node_decode_debug.py  sorter_node_decode_openfield.py  sorter_node_decode_reward.py  sorter_node_editor.py  sorter_node_openephys_replay.py  sorter_node_openephys_sim.py  sorter_node_openephys_sim_node_editor.py  sorter_node_paper.py  sorter_node_simple.py  sorter_node_spikeSortvisualize.py  sorter_node_zmq.py  udp_server.py
.claude/: settings.local.json
archive/: convert_message_format.py  sorter_node_paper2.py  sorter_node_zmq.py  uml_visualize.py  zmq_client.py
doc/: Architecture.md  Installation.md  Usage.md  api.rst  classes.dot  conf.py  index.rst  packages.dot  requirements.txt
notebooks/: 01_load_data.ipynb  01b_tuning_curves.ipynb  02a_regression_decode.ipynb  02b_classification_decode.ipynb  02b_classification_decode_balanced.ipynb  02c_classification_decode_balanced_shuffled.ipynb  agg_decode.ipynb  check_agg_buffer.ipynb  check_agg_buffer_v2.ipynb  check_templates.ipynb  cpython_profile.ipynb  decode_control_smoothing.ipynb  decode_study.ipynb  decode_study_balanced.ipynb  export_tracking_position.ipynb  igraph.ipynb  kalman_example.ipynb  node_sort_perf_measure.ipynb  node_sort_perf_measure_v2.ipynb  noise_study.ipynb  online_decoding_spikeDetect_compare_onlineWhitening.ipynb  read_openfield_data.ipynb  (+11 more)
(+119 files in other folders)
